<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark1">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/profile_guest_delete_user"
        style="@style/Text.Red.14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_user_menu_button"
        android:text="@string/profile_guest_delete_user"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/profile_guest_add_to_contacts"
        style="@style/Text.White.14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_user_menu_button"
        android:text="@string/profile_guest_add_to_contacts"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_guest_delete_user" />

    <TextView
        android:id="@+id/profile_guest_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Text.Gray.14sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_guest_add_to_contacts"
        android:text="@string/profile_guest_cancel"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="40dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>